# CompGraphics

./: .gitignore  README.md
Lab_1/: AppWin.cpp  AppWin.hpp  CMakeLists.txt  GlSubWin.cpp  GlSubWin.hpp  SliderInput.cpp  SliderInput.hpp  States.cpp  States.hpp  compile.sh  libs.hpp  main.cpp
Lab_1-2/Source/: AppWin.cpp  AppWin.hpp  GlSubWin.cpp  Painters.hpp  main.cpp
Lab_1/Source/: AppWin.cpp  AppWin.hpp  GlSubWin.cpp  GlSubWin.hpp  Painters.cpp  Painters.hpp  SliderInput.hpp  States.cpp  States.hpp  libs.hpp  main.cpp
Lab_3/: CMakeLists.txt  algo.txt
Lab_3/Source/: AppWin.cpp  AppWin.hpp  GlSubWin.cpp  GlSubWin.hpp  State.cpp  State.hpp  libs.hpp  main.cpp
Lab_4/: CMakeLists.txt
Lab_4/App/: imgui.ini
Lab_4/Source/: AppWin.cpp  AppWin.hpp  GlSubWin.cpp  GlSubWin.hpp  SimpleGL3Window.cpp  SimpleGL3Window.hpp  State.cpp  State.hpp  libs.hpp  main.cpp
Lab_5/: .gitignore  CMakeLists.txt
Lab_5/Shaders/: fragment.shader  vertex.shader
Lab_5/Source/: AppWin.cpp  AppWin.hpp  Shader.cpp  Shader.hpp  SimpleGL3Window.cpp  SimpleGL3Window.hpp  libs.hpp  main.cpp
Lab_6/: CMakeLists.txt
Lab_6/Shaders/: fragment.shader  vertex.shader
Lab_6/Source/: AppWin.cpp  AppWin.hpp  Camera.hpp  Shader.cpp  SimpleGL3Window.cpp  SimpleGL3Window.hpp  State.cpp  State.hpp  libs.hpp  main.cpp
kursach/: CMakeLists.txt
kursach/Shaders/: fragment_contour.shader  fragment_figures.shader  geometry_normal.shader  vertex_axes.shader  vertex_contour.shader  vertex_figures.shader  vertex_normal.shader
kursach/Source/: AppWin.cpp  AppWin.hpp  Cylinder.cpp  Cylinder.hpp  Shader.cpp  Shader.hpp  SimpleGL3Window.cpp  SimpleGL3Window.hpp  State.cpp  State.hpp  libs.hpp  main.cpp
(+32 files in other folders)
